+ Thêm tên project  ở trước khung code ở trang login client + Margin top pop up cho không bị đè logo ở client + Thêm icon download ở tài liệu + Đem menu QA lên đầu ở client + Login chuyển trang ở admin (system admin và admin)

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -2,7 +2,8 @@
     //int eventId = Int32.Parse(ViewContext.RouteData.Values["id"].ToString());
 
     int eventId = ViewBag.EventId != null ? ViewBag.EventId : 0;
-    
+    var user = HttpContext.Current.User;
+
 }
 
 <!DOCTYPE html>
@@ -140,8 +141,9 @@
                 </div>
               
                 <!-- sidebar menu: : style can be found in sidebar.less -->
+
                 <ul class="sidebar-menu" data-widget="tree">
-                    @if (ViewBag.IsLayoutAdmin == null)
+                    @if (user.IsInRole("Admin"))
                     {
                         <li><a href="@Url.Action("Index","ManageSession", new { id = eventId})"><i class="fa fa-wrench" aria-hidden="true"></i> <span>Trung tâm điều khiển</span></a></li>
                         <li class="treeview">
