--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/File/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/File/Index.cshtml
@@ -53,7 +53,7 @@ else
                 <p class="file-description"></p>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-default file-url" data-dismiss="modal">Tải xuống</button>
+                <button class="btn btn-default file-url btn-custom-defaul" data-dismiss="modal"> <i class="fa fa-download" aria-hidden="true"></i>  Tải xuống</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
             </div>
         </div>
