--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @using HmsService.ViewModels;
 @model EventViewModel
 
-<div class="container-fluid" style="padding-top: 64px;padding-left:20%;">
+<div class="container-fluid" style="padding-top: 64px;">
     <div class="animated fadeIn">
         <div class="event-banner">
             <img class="event-banner-image" src="~/Content/img/new_statesman_events.jpg">
