--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/File/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/File/Index.cshtml
@@ -32,10 +32,10 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-briefcase" aria-hidden="true"></i>
                                     </div>
-                                    <input id="newName" type="text" class="form-control file-title" placeholder="Nhập tên Tài Liệu">
+                                    <input id="newName" type="text" class="form-control file-title" placeholder="Mời chọn tài liệu" readonly>
                                 </div>
                                 <div class="div-title-error empty col-lg-offset-3 col-lg-9 div-name-error" id="file-name-error">
-                                    <p class="empty">Vui lòng nhập tên tài liệu</p>
+                                    @*<p class="empty">Vui lòng nhập tên tài liệu</p>*@
                                 </div>
                             </div>
                             <div class="form-group">
@@ -48,11 +48,11 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Đường dẫn tải:</label>
+                                <label class="col-sm-3 form-control-label">Tài liệu:</label>
                                 <div class="col-sm-9" style="padding-left: 0px;">
                                     <div class="field">
                                         <div class="control">
-                                            <button class="button" type="button" id="picker">Chọn file</button>
+                                            <button class="button" type="button" id="picker">Chọn tài liệu</button>
                                             <input type="hidden" id="fileupload">
                                         </div>
                                     </div>
@@ -74,10 +74,10 @@
             <table class="table table-hover table-bordered" id="tblFile">
                 <thead>
                     <tr>
-                        <th>Tên</th>
-                        <th>Miêu Tả</th>
+                        <th>Tên tài liệu</th>
+                        <th>Miêu tả</th>
                         <th>Đường dẫn</th>
-                        <th>Chức Năng</th>
+                        <th>Chức năng</th>
                     </tr>
                 </thead>
             </table>
@@ -110,16 +110,47 @@
         var urlApi = '@curPath';
         var eventId = @eventId;
 
-        function showModalFile(id, name, description, image) {
+        function showModalFile(id, name, description, url) {
             $('.file-title').val(name);
             $('.file-description').val(description);
-            $('.file-url').val(image);
+            $('.file-url').val(url);
             $('.file-id').val(id);
-            $('#thumbnail-container').html(image);
-            $('#thumbnail-container').attr('style', 'padding-top: 10px;');
+            $('#thumbnail-container').attr('style', 'padding-top: 12px;');
             $('.modal-title').text('Chỉnh sửa tài liệu');
             $('.file-button').text('Lưu');
             $('.file-button').attr('id', 'btn-save');
+
+            if (['pdf'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-pdf-o' style='padding-right: 10px;'></i>" + name);
+            } else
+            if (['docx', 'doc'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-word-o' style='padding-right: 10px;'></i>" + name);
+            } else
+            if (['xlsx', 'xls'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-excel-o' style='padding-right: 10px;'></i>" + name);
+            } else
+            if (['avi', 'flv', 'wmv', 'mov', 'mp4'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-video-o ' style='padding-right: 10px;'></i>" + name);
+            } else
+            if (['mp3', 'flac', 'wma', 'wav', 'midi', 'ogg', 'ac3', 'amr'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-audio-o' style='padding-right: 10px;'></i>" + name);
+            } else
+            if (['zip', 'rar', '7z'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-archive-o' style='padding-right: 10px;'></i>" + name);
+            } else
+            if (['txt', 'rtf'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-text-o' style='padding-right: 10px;'></i>" + name);
+            } else
+            if (['ppt', 'pps', 'ppts', 'ppsx'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-powerpoint-o' style='padding-right: 10px;'></i>" + name);
+            } else
+            if (['jpeg', 'png'].indexOf(name.split('.')[1]) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-image-o' style='padding-right: 10px;'></i>" + name);
+            } else {
+                $('#thumbnail-container').html("<i class='fa fa-file-o ' style='padding-right: 10px;'></i>" + name);
+            } 
+
+
         }
         function clearModal() {
             $('.file-title').val('');
@@ -218,12 +249,45 @@
              function updateForm(result) {
                  const fileData = result.filesUploaded[0];
                  fileInput.value = fileData.url;
+
                  if (fileInput.value != null) {
                      $('#thumbnail-container').val(fileInput.value);
-                     $('#thumbnail-container').html(fileInput.value);
-                     $('#thumbnail-container').attr('style', 'padding-top: 10px;');
+                     $('.file-title').val(fileData.filename);
+                     $('#thumbnail-container').attr('style', 'padding-top: 12px;');
+
+                     if (['pdf'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-pdf-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else
+                     if (['docx', 'doc'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-word-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else
+                     if (['xlsx', 'xls'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-excel-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else
+                     if (['avi', 'flv', 'wmv', 'mov', 'mp4'].indexOf(fileData.mimetype.split('/')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-video-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else
+                     if (['mp3', 'flac', 'wma', 'wav', 'midi', 'ogg', 'ac3', 'amr'].indexOf(fileData.mimetype.split('/')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-audio-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else
+                     if (['zip', 'rar', '7z'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-archive-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else
+                     if (['txt', 'rtf'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-text-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else
+                     if (['ppt', 'pps', 'ppts', 'ppsx'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-powerpoint-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else
+                     if (['jpeg', 'png'].indexOf(fileData.mimetype.split('/')[1]) !== -1) {
+                         $('#thumbnail-container').html("<i class='fa fa-file-image-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     } else {
+                         $('#thumbnail-container').html("<i class='fa fa-file-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                     }
+
                  }
-                 // If file is resizable image, resize and embed it as a thumbnail preview
+
+
              };
 
         });
