--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
@@ -49,8 +49,11 @@
     
     <div class="limiter">
         <div class="container-login100" style="background-color:#005f75;padding-top:15px;left:unset!important;">
-            <div style="padding-top: 60px;"><img src="~/Content/img/LogoMakr_6CVPn5.png" style="width:220px;height:200px;" /></div>
-            <p class="intro-title">Nền tảng tương tác trong sự kiện</p>
+            <div style="padding-top: 60px; width:100%;">
+                <img src="~/Content/img/LogoMakr_6CVPn5.png" style="width:220px;height:200px;" />
+                <p class="intro-title">Nền tảng tương tác trong sự kiện</p>
+            </div>
+            
             <div class="wrap-login100 p-b-30" style="left:unset!important">
                 <div class="login100-form validate-form" id="div-section">
                     <div class="message-error">
