--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
@@ -236,7 +236,7 @@
 
 <!-- Modal Post New Question  -->
 <div class="modal fade" id="postQuestionModal" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-post-question">
 
         <!-- Modal content-->
         <div class="modal-content">
@@ -261,7 +261,7 @@
 
 <!-- Modal Post Reply Question -->
 <div class="modal fade" id="modalReply" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-reply-question">
 
         <!-- Modal content-->
         <div class="modal-content">
