--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
     var sessionId = ViewBag.SessionId;
     var sessionNumber = ViewBag.SessionNumber;
     string eventName = ViewBag.EventName != null ? ViewBag.EventName : "";
+    string sessionName = ViewBag.SessionName != null ? ViewBag.SessionName : "";
 }
 
 <!DOCTYPE html>
@@ -113,31 +114,6 @@
         </li>*@
                 </ul>
             </div>
-            @*<div class="admin-menu">
-                    <ul id="side-admin-menu" class="side-menu list-unstyled">
-                        <li>
-                            <a href="#pages-nav-list" data-toggle="collapse" aria-expanded="false">
-                                <i class="icon-interface-windows"></i><span>Dropdown</span>
-                                <div class="arrow pull-right"><i class="fa fa-angle-down"></i></div>
-                            </a>
-                            <ul id="pages-nav-list" class="collapse list-unstyled">
-                                <li> <a href="#">Page 1</a></li>
-                                <li> <a href="#">Page 2</a></li>
-                                <li> <a href="#">Page 3</a></li>
-                                <li> <a href="#">Page 4</a></li>
-                            </ul>
-                        </li>
-                        <li> <a href="#"> <i class="icon-screen"> </i><span>Demo</span></a></li>
-                        <li>
-                            <a href="#">
-                                <i class="icon-flask"> </i><span>Demo</span>
-                                <div class="badge badge-info">Special</div>
-                            </a>
-                        </li>
-                        <li> <a href="#"> <i class="icon-flask"> </i><span>Demo</span></a></li>
-                        <li> <a href="#"> <i class="icon-picture"> </i><span>Demo</span></a></li>
-                    </ul>
-                </div>*@
         </div>
     </nav>
 
@@ -147,7 +123,19 @@
             <nav class="navbar narbar-custom" style="height: 64px;">
                 <div class="container-fluid">
                     <div class="navbar-holder d-flex align-items-center justify-content-between">
-                        <span class="event-title">@(ViewBag.EventName)</span>
+                        <span class="event-title">
+                            @{
+                                if (ViewBag.EventName != null)
+                                {
+                                    @(ViewBag.EventName)
+                                }
+                                else
+                                {
+                                    @(ViewBag.SessionName)
+                                }
+                            }
+
+                        </span>
                         <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
                             
                             @*@{
