--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/Sponsor.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/Sponsor.css
@@ -15,7 +15,7 @@
     .image-sponsor-custom {
         width: 100%;
         min-width: 307.75px;
-        height: auto;
+        height: 180px;
     }
 
     .modal-sponsor {
