--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/main.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/main.css
@@ -71,9 +71,9 @@
     color: black;
     opacity:1;
 }
-.custom-row {
+/*.custom-row {
     padding-left: 16%;
-}
+}*/
 
 .event-title {
     color:white;
