--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/File/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/File/Index.cshtml
@@ -120,35 +120,37 @@
             $('.file-button').text('Lưu');
             $('.file-button').attr('id', 'btn-save');
 
-            if (['pdf'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-pdf-o' style='padding-right: 10px;'></i>" + name);
+            var nameSplit = name.split('.');
+            var mimetype = nameSplit[nameSplit.length - 1];
+            if (['pdf'].indexOf(mimetype) !== -1) {
+                $('#thumbnail-container').html("<i class='fa fa-file-pdf-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else
-            if (['docx', 'doc'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-word-o' style='padding-right: 10px;'></i>" + name);
+                if (['docx', 'doc'].indexOf(mimetype) !== -1) {
+                    $('#thumbnail-container').html("<i class='fa fa-file-word-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else
-            if (['xlsx', 'xls'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-excel-o' style='padding-right: 10px;'></i>" + name);
+                    if (['xlsx', 'xls'].indexOf(mimetype) !== -1) {
+                        $('#thumbnail-container').html("<i class='fa fa-file-excel-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else
-            if (['avi', 'flv', 'wmv', 'mov', 'mp4'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-video-o ' style='padding-right: 10px;'></i>" + name);
+                        if (['avi', 'flv', 'wmv', 'mov', 'mp4'].indexOf(mimetype) !== -1) {
+                            $('#thumbnail-container').html("<i class='fa fa-file-video-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else
-            if (['mp3', 'flac', 'wma', 'wav', 'midi', 'ogg', 'ac3', 'amr'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-audio-o' style='padding-right: 10px;'></i>" + name);
+                            if (['mp3', 'flac', 'wma', 'wav', 'midi', 'ogg', 'ac3', 'amr', 'aac', 'm4a'].indexOf(mimetype) !== -1) {
+                                $('#thumbnail-container').html("<i class='fa fa-file-audio-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else
-            if (['zip', 'rar', '7z'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-archive-o' style='padding-right: 10px;'></i>" + name);
+                                if (['zip', 'rar', '7z'].indexOf(mimetype) !== -1) {
+                                    $('#thumbnail-container').html("<i class='fa fa-file-archive-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else
-            if (['txt', 'rtf'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-text-o' style='padding-right: 10px;'></i>" + name);
+                                    if (['txt', 'rtf'].indexOf(mimetype) !== -1) {
+                                        $('#thumbnail-container').html("<i class='fa fa-file-text-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else
-            if (['ppt', 'pps', 'ppts', 'ppsx'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-powerpoint-o' style='padding-right: 10px;'></i>" + name);
+                                        if (['ppt', 'pps', 'pptx', 'ppsx'].indexOf(mimetype) !== -1) {
+                                            $('#thumbnail-container').html("<i class='fa fa-file-powerpoint-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else
-            if (['jpeg', 'png'].indexOf(name.split('.')[1]) !== -1) {
-                $('#thumbnail-container').html("<i class='fa fa-file-image-o' style='padding-right: 10px;'></i>" + name);
+                                            if (['jpeg', 'png'].indexOf(mimetype) !== -1) {
+                                                $('#thumbnail-container').html("<i class='fa fa-file-image-o fa-2x' style='padding-right: 10px;'></i>" + name);
             } else {
-                $('#thumbnail-container').html("<i class='fa fa-file-o ' style='padding-right: 10px;'></i>" + name);
-            } 
+                $('#thumbnail-container').html("<i class='fa fa-file-o fa-2x' style='padding-right: 10px;'></i>" + name);
+            }
 
 
         }
@@ -163,10 +165,10 @@
             $('.file-button').attr('id', 'btn-add');
         }
 
-        function delFile(id, name) {
-             $('.file-del-id').val(id);
-             $('.file-del-title').html("Xóa Tài Liệu " + name);
-        }
+        //function delFile(id, name) {
+        //     $('.file-del-id').val(id);
+        //     $('.file-del-title').html("Xóa Tài Liệu " + name);
+        //}
 
          $(document).ready(function () {
              $('#tblFile').DataTable({
@@ -210,7 +212,7 @@
                         name: "Function",
                         render: function (data, type, row) {
                             return '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#fileModal" onclick="showModalFile(' + row.collectionItemID + ',\'' + row.name + '\', \'' + row.description + '\', \'' + row.imageUrl + '\')"><i class="fa fa-pencil"></i></button>     ' +
-                                '<button class="btn btn-danger btn-sm file-id" data-toggle="modal" data-target="#deleteModal" onclick="delFile(' + row.collectionItemID + ',\'' + row.name + '\')"><i class="fa fa-trash"></i></button>';
+                                '<button class="btn btn-danger btn-sm file-id" onclick="delFile(' + row.collectionItemID + ',\'' + row.name + '\')"><i class="fa fa-trash"></i></button>';
                         }
                     }
                 ]
@@ -250,36 +252,38 @@
                  const fileData = result.filesUploaded[0];
                  fileInput.value = fileData.url;
 
+                 var nameSplit = fileData.filename.split('.');
+                 var mimetype = nameSplit[nameSplit.length - 1];
                  if (fileInput.value != null) {
                      $('#thumbnail-container').val(fileInput.value);
                      $('.file-title').val(fileData.filename);
                      $('#thumbnail-container').attr('style', 'padding-top: 12px;');
 
-                     if (['pdf'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                     if (['pdf'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-pdf-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
-                     if (['docx', 'doc'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                         if (['docx', 'doc'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-word-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
-                     if (['xlsx', 'xls'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                             if (['xlsx', 'xls'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-excel-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
-                     if (['avi', 'flv', 'wmv', 'mov', 'mp4'].indexOf(fileData.mimetype.split('/')[1]) !== -1) {
+                                 if (['avi', 'flv', 'wmv', 'mov', 'mp4'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-video-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
-                     if (['mp3', 'flac', 'wma', 'wav', 'midi', 'ogg', 'ac3', 'amr'].indexOf(fileData.mimetype.split('/')[1]) !== -1) {
+                                     if (['mp3', 'flac', 'wma', 'wav', 'midi', 'ogg', 'ac3', 'amr', 'aac', 'm4a'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-audio-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
-                     if (['zip', 'rar', '7z'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                                         if (['zip', 'rar', '7z'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-archive-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
-                     if (['txt', 'rtf'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                                             if (['txt', 'rtf'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-text-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
-                     if (['ppt', 'pps', 'ppts', 'ppsx'].indexOf(fileData.filename.split('.')[1]) !== -1) {
+                                                 if (['ppt', 'pps', 'pptx', 'ppsx'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-powerpoint-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
-                     if (['jpeg', 'png'].indexOf(fileData.mimetype.split('/')[1]) !== -1) {
+                                                     if (['jpeg', 'png'].indexOf(mimetype) !== -1) {
                          $('#thumbnail-container').html("<i class='fa fa-file-image-o' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else {
                          $('#thumbnail-container').html("<i class='fa fa-file-o' style='padding-right: 10px;'></i>" + fileData.filename);
