--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Sponsor/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Sponsor/Index.cshtml
@@ -134,11 +134,11 @@
             $('.sponsor-button').attr('id', 'btn-add');
         }
 
-        function delSponsor(id, name) {
-            $('.modal-title').text('Xóa nhà tài trợ');
-            $('#btn-del').val(id);
-            $('.sponsor-del-title').html("Xóa nhà tài trợ " + name);
-        }
+        //function delSponsor(id, name) {
+        //    $('.modal-title').text('Xóa nhà tài trợ');
+        //    $('#btn-del').val(id);
+        //    $('.sponsor-del-title').html("Xóa nhà tài trợ " + name);
+        //}
 
         $(document).ready(function () {
             $('#tblSponsor').DataTable({
@@ -182,7 +182,7 @@
                         name: "Function",
                         render: function (data, type, row) {
                             return '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#sponsorModal" onclick="showModalSponsor(' + row.collectionItemID + ',\'' + row.name + '\', \'' + row.description + '\', \'' + row.imageUrl + '\')"><i class="fa fa-pencil"></i></button>     ' +
-                                '<button class="btn btn-danger btn-sm sponsor-id" data-toggle="modal" data-target="#deleteModal" onclick="delSponsor(' + row.collectionItemID + ',\'' + row.name + '\')"><i class="fa fa-trash"></i></button>';
+                                '<button class="btn btn-danger btn-sm sponsor-id"  onclick="delSponsor(' + row.collectionItemID + ',\'' + row.name + '\')"><i class="fa fa-trash"></i></button>';
                         }
                     }
                 ]
