--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
@@ -13,7 +13,7 @@
 @media screen and (max-width: 600px) {
     .image-speaker-custom {
         width: 100%;
-        height: auto;
+        height: 180px;
     }
 
     .box-speaker-shadow {
